# crane-lang

./: Cargo.toml  README.md  test.cr  test2.cr
.cargo/: config.toml
arena/: Cargo.toml
arena/benches/: benches.rs
arena/examples/: test.rs
arena/src/: lib.rs
crane-ast/: Cargo.toml
crane-lex/: Cargo.toml
crane-lex/examples/: test.rs
crane-lex/src/: lib.rs  macros.rs  token.rs  tokenize.rs
crane-macros/: Cargo.toml
crane-macros/src/: lib.rs
crane-parse/: Cargo.toml
crane-parse/src/: expr.rs  item.rs  lib.rs  ops.rs  package.rs  path.rs  recovery.rs  stmt.rs  ty.rs  unit.rs
cranec/: Cargo.toml
crc/: Cargo.toml
crc/src/: main.rs
lex/: Cargo.toml
lex/src/: lib.rs
mir/: Cargo.toml
mir/src/: builder.rs  graphviz.rs  instruction.rs  interner.rs  lib.rs  scope.rs  transformation.rs  ty.rs
parse/: Cargo.toml
parse/src/: expr.rs  item.rs  lib.rs  package.rs  path.rs  recovery.rs  ty.rs  unit.rs
