[package]
name = "crane-lex"
version = "0.0.1"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
license = "MIT"
description = "Lexer library for the Crane programming language."
repository = "https://github.com/willothy/crane-lang"
readme = "../README.md"

[dependencies]
anyhow = "1.0.71"
ariadne = "0.2.0"
chumsky = { git = "https://github.com/zesterer/chumsky" }
log = "0.4.17"
