[package]
name = "crane-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
ariadne = { version = "0.2.0", features = ["auto-color"] }
crane-lex = { path = "../crane-lex/" }
log = "0.4.17"
slotmap = "1.0.6"
