[package]
name = "crane-lang"
version = "0.0.1"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
license = "MIT"
description = "Binary crate for the Crane compiler, crc."
repository = "https://github.com/willothy/crane-lang"
readme = "../README.md"

[[bin]]
name = "crc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
ariadne = { version = "0.2.0", features = ["auto-color"] }
chumsky = { git = "https://github.com/zesterer/chumsky", features = ["label"] }
crane-lex = { version = "0.0.1", path = "../crane-lex/" }
crane-parse = { path = "../crane-parse/" }
env_logger = "0.10.0"
log = "0.4.17"
