[package]
name = "crane-mir"
version = "0.1.0"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
license = "MIT"
description = "Intermediate representation for the Crane programming language."
repository = "https://github.com/willothy/crane-lang"
readme = "../README.md"

[dependencies]
anyhow = "1.0.71"
ariadne = { git = "https://github.com/zesterer/ariadne" }
chumsky = { git = "https://github.com/zesterer/chumsky", features = ["label"] }
slotmap = "1.0.6"
log = "0.4.17"
crane-parse = { version = "0.1.0", path = "../parse/" }
crane-lex = { version = "0.1.0", path = "../lex" }
