[package]
name = "crane-parse"
version = "0.1.0"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
license = "MIT"
description = "Parser for the Crane programming language."
repository = "https://github.com/willothy/crane-lang"
readme = "../README.md"

[dependencies]
anyhow = "1.0.71"
ariadne = { git = "https://github.com/zesterer/ariadne" }
chumsky = { git = "https://github.com/zesterer/chumsky", features = ["label"] }
crane-lex = { version = "0.1.0", path = "../lex/" }
log = "0.4.17"
slotmap = "1.0.6"
